# rimi-cli

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
commands/account_profile/: command.yaml
commands/account_profile/goldens/: account_profile_001.json
commands/account_profile/processors/: post.py  pre.py
commands/account_whoami/: command.yaml
commands/account_whoami/goldens/: account_whoami_001.json
commands/account_whoami/processors/: post.py  pre.py
commands/cart_recommendations/: command.yaml
commands/cart_recommendations/goldens/: cart_recommendations_001.json
commands/cart_recommendations/processors/: post.py  pre.py
commands/cart_show/: command.yaml
commands/cart_show/goldens/: cart_show_001.json
commands/cart_show/processors/: post.py  pre.py
commands/cart_update_item/: command.yaml
commands/cart_update_item/goldens/: cart_update_item_001.json
commands/cart_update_item/processors/: post.py  pre.py
commands/checkout_choose_time_slot/: command.yaml
commands/checkout_choose_time_slot/goldens/: checkout_choose_time_slot_001.json
commands/checkout_choose_time_slot/processors/: post.py  pre.py
commands/checkout_choose_time_slot/tests/: test_command.py
commands/checkout_payment_methods/: command.yaml
commands/checkout_payment_methods/goldens/: checkout_payment_methods_001.json
commands/checkout_payment_methods/processors/: post.py  pre.py
commands/checkout_prices/: command.yaml
commands/checkout_prices/goldens/: checkout_prices_001.json
commands/checkout_prices/processors/: post.py  pre.py
commands/checkout_time_slots/: command.yaml
commands/checkout_time_slots/goldens/: checkout_time_slots_001.json
commands/checkout_time_slots/processors/: post.py  pre.py
commands/favorites_add/: command.yaml
commands/favorites_add/goldens/: favorites_add_001.json
commands/favorites_add/processors/: post.py  pre.py
commands/favorites_categories/: command.yaml
commands/favorites_categories/goldens/: favorites_categories_001.json
commands/favorites_categories/processors/: post.py  pre.py
commands/favorites_list/: command.yaml
commands/favorites_list/goldens/: favorites_list_001.json
commands/favorites_list/processors/: post.py  pre.py
commands/favorites_remove/: command.yaml
commands/favorites_remove/goldens/: favorites_remove_001.json
commands/favorites_remove/processors/: post.py  pre.py
commands/orders_current/: command.yaml
commands/orders_current/goldens/: orders_current_001.json
commands/orders_current/processors/: post.py  pre.py
commands/orders_history/: command.yaml
commands/orders_history/goldens/: orders_history_001.json
commands/orders_history/processors/: post.py  pre.py
commands/orders_invoice/: command.yaml
commands/products_categories/: command.yaml
commands/products_get/: command.yaml
commands/products_list/: command.yaml
commands/wallet_apply/: command.yaml
commands/wallet_balance/: command.yaml
skills/authenticate/: SKILL.md
skills/build-cli/: SKILL.md
tests/: test_runtime_auth.py  test_runtime_help.py
www_rimi_ee/: __init__.py  __main__.py  cli.py  runtime.py  testing.py
(+87 files in other folders)
