[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rimi"
version = "0.1.0"
description = "Command-line client for Rimi e-store workflows"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Alexis Boix" }
]
keywords = [
  "autocli",
  "cli",
  "ecommerce",
  "grocery",
  "rimi",
  "typer"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities"
]
dependencies = [
  "httpx>=0.27,<1",
  "keyring>=25,<26",
  "msgpack>=1,<2",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "rich>=13.7,<14",
  "typer>=0.16,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.14,<1"
]
test = [
  "pytest>=8.3,<9"
]

[project.urls]
Homepage = "https://github.com/alex-j-b/rimi-cli"
Repository = "https://github.com/alex-j-b/rimi-cli"
Issues = "https://github.com/alex-j-b/rimi-cli/issues"

[project.scripts]
rimi = "www_rimi_ee.cli:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["commands*", "shared*", "www_rimi_ee*"]
namespaces = false

[tool.setuptools.package-data]
commands = [
  "*/command.yaml",
  "*/processors/*.py"
]

[tool.autocli]
schema_version = 1
executable_name = "rimi"
site_slug = "www-rimi-ee"
site_module = "www_rimi_ee"
primary_hosts = ["www.rimi.ee"]
command_root = "commands"
shared_package = "shared"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP"
]

[tool.ruff.format]
quote-style = "single"
